--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "build": "webpack"
     },
     "dependencies": {
+        "@inpassor/functions": "^0.1.1",
         "body-parser": "^1.18.3",
         "cookie-parser": "^1.4.3",
         "cors": "^2.8.4",
@@ -42,6 +43,7 @@
     "devDependencies": {
         "@firebase/app-types": "^0.3.2",
         "@types/express": "^4.16.0",
+        "dts-bundle-webpack": "^1.0.0",
         "ts-loader": "^5.2.1",
         "tslint": "^5.11.0",
         "typescript": "2.9.2",
