--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "cookie-parser": "^1.4.3",
         "cors": "^2.8.4",
         "crypto-js": "^3.1.9-1",
+        "ejs": "^2.6.1",
         "express": "^4.16.4",
         "express-sanitizer": "^1.0.4",
         "express-session": "^1.15.6",
@@ -44,7 +45,7 @@
         "@firebase/app-types": "^0.3.2",
         "@types/express": "^4.16.0",
         "dts-bundle-webpack": "^1.0.0",
-        "ts-loader": "^5.2.1",
+        "ts-loader": "^5.2.2",
         "tslint": "^5.11.0",
         "typescript": "2.9.2",
         "webpack-cli": "^3.1.2"
