--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
         "express-session": "^1.15.6",
         "firebase-admin": "^6.0.0",
         "firebase-functions": "^2.0.5",
+        "google-auth-library": "^2.0.0",
+        "googleapis": "^34.0.0",
         "helmet": "^3.14.0",
+        "node-cache": "^4.2.0",
         "webpack": "^4.20.2",
         "webpack-node-externals": "^1.7.2"
     },
