--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@inpassor/firebase-app",
-    "version": "0.1.13",
+    "version": "0.1.14",
     "license": "MIT",
     "author": "Oleg V. Kuzmin",
     "description": "Firebase Express application",
@@ -47,7 +47,9 @@
     "devDependencies": {
         "@firebase/app-types": "^0.3.2",
         "@types/express": "^4.16.0",
+        "clean-webpack-plugin": "^0.1.19",
         "dts-bundle-webpack": "^1.0.0",
+        "json-loader": "^0.5.7",
         "ts-loader": "^5.2.2",
         "tslint": "^5.11.0",
         "typescript": "2.9.2",
