--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@inpassor/firebase-app",
-    "version": "0.1.19",
+    "version": "0.2.0",
     "license": "MIT",
     "author": "Oleg V. Kuzmin",
     "description": "Firebase Express application",
@@ -17,16 +17,18 @@
         "express",
         "REST",
         "serverless",
+        "application",
+        "framework",
         "javascript",
         "typescript"
     ],
     "main": "lib/index.js",
     "scripts": {
         "lint": "tslint --project tsconfig.json",
-        "build": "webpack"
+        "build": "tsc"
     },
     "dependencies": {
-        "@inpassor/functions": "^0.1.1",
+        "@inpassor/functions": "^0.2.0",
         "body-parser": "^1.18.3",
         "cookie-parser": "^1.4.3",
         "cors": "^2.8.4",
@@ -37,22 +39,13 @@
         "express-session": "^1.15.6",
         "firebase-admin": "^6.0.0",
         "firebase-functions": "^2.0.5",
-        "google-auth-library": "^2.0.0",
-        "googleapis": "^34.0.0",
-        "helmet": "^3.14.0",
-        "node-cache": "^4.2.0",
-        "node-fetch": "^2.2.0",
-        "webpack": "^4.20.2",
-        "webpack-node-externals": "^1.7.2"
+        "helmet": "^3.14.0"
     },
     "devDependencies": {
         "@firebase/app-types": "^0.3.2",
         "@types/express": "^4.16.0",
-        "clean-webpack-plugin": "^0.1.19",
-        "dts-bundle-webpack": "^1.0.0",
-        "ts-loader": "^5.2.2",
+        "@types/node": "^10.12.0",
         "tslint": "^5.11.0",
-        "typescript": "2.9.2",
-        "webpack-cli": "^3.1.2"
+        "typescript": "2.9.2"
     }
 }
