--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@inpassor/firebase-app",
-    "version": "0.2.20",
+    "version": "0.2.21",
     "license": "MIT",
     "author": "Oleg V. Kuzmin",
     "description": "Firebase Express application",
@@ -28,7 +28,7 @@
         "build": "tsc"
     },
     "dependencies": {
-        "@inpassor/functions": "^0.2.2",
+        "@inpassor/functions": "^0.2.3",
         "body-parser": "^1.18.3",
         "cookie-parser": "^1.4.3",
         "cors": "^2.8.4",
@@ -46,6 +46,6 @@
         "@types/express": "^4.16.0",
         "@types/node": "^10.12.0",
         "tslint": "^5.11.0",
-        "typescript": "2.9.2"
+        "typescript": "^3.1.3"
     }
 }
