--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@inpassor/firebase-app",
-    "version": "0.2.23",
+    "version": "0.3.0",
     "license": "MIT",
     "author": "Oleg V. Kuzmin",
     "description": "Firebase Express application",
@@ -29,6 +29,7 @@
     },
     "dependencies": {
         "@inpassor/functions": "^0.2.3",
+        "@sentry/node": "^4.2.3",
         "body-parser": "^1.18.3",
         "cookie-parser": "^1.4.3",
         "cors": "^2.8.4",
@@ -37,8 +38,8 @@
         "express": "^4.16.4",
         "express-sanitizer": "^1.0.4",
         "express-session": "^1.15.6",
-        "firebase-admin": "^6.0.0",
-        "firebase-functions": "^2.0.5",
+        "firebase-admin": "^6.1.0",
+        "firebase-functions": "^2.1.0",
         "helmet": "^3.14.0"
     },
     "devDependencies": {
