--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     ],
     "main": "lib/index.js",
     "scripts": {
+        "clean": "rimraf ./lib",
         "lint": "tslint --project tsconfig.json",
-        "build": "tsc"
+        "build": "npm run lint && npm run clean && tsc"
     },
     "dependencies": {
         "@inpassor/functions": "^0.2.4",
-        "@sentry/node": "^4.3.2",
+        "@sentry/node": "^4.5.3",
         "body-parser": "^1.18.3",
         "cookie-parser": "^1.4.3",
         "cors": "^2.8.5",
@@ -37,15 +38,16 @@
         "express": "^4.16.4",
         "express-sanitizer": "^1.0.4",
         "express-session": "^1.15.6",
-        "firebase-admin": "^6.2.0",
-        "firebase-functions": "^2.1.0",
+        "firebase-admin": "^7.0.0",
+        "firebase-functions": "^2.2.0",
         "helmet": "^3.15.0"
     },
     "devDependencies": {
-        "@firebase/app-types": "^0.3.2",
-        "@types/express": "^4.16.0",
-        "@types/node": "^10.12.9",
-        "tslint": "^5.11.0",
-        "typescript": "^3.1.6"
+        "@firebase/app-types": "^0.3.3",
+        "@types/express": "^4.16.1",
+        "@types/node": "^10.12.21",
+        "rimraf": "^2.6.3",
+        "tslint": "^5.12.1",
+        "typescript": "^3.3.1"
     }
 }
