--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@inpassor/firebase-app",
-    "version": "0.3.16",
+    "version": "0.3.17",
     "license": "MIT",
     "author": "Oleg V. Kuzmin",
     "description": "Firebase Express application",
@@ -16,6 +16,7 @@
         "firebase",
         "express",
         "REST",
+        "API",
         "serverless",
         "application",
         "framework",
@@ -30,9 +31,9 @@
     },
     "dependencies": {
         "@inpassor/functions": "^0.2.4",
-        "@sentry/node": "^4.5.3",
+        "@sentry/node": "^4.6.2",
         "body-parser": "^1.18.3",
-        "cookie-parser": "^1.4.3",
+        "cookie-parser": "^1.4.4",
         "cors": "^2.8.5",
         "ejs": "^2.6.1",
         "express": "^4.16.4",
@@ -40,12 +41,12 @@
         "express-session": "^1.15.6",
         "firebase-admin": "^7.0.0",
         "firebase-functions": "^2.2.0",
-        "helmet": "^3.15.0"
+        "helmet": "^3.15.1"
     },
     "devDependencies": {
-        "@firebase/app-types": "^0.3.3",
+        "@firebase/app-types": "^0.3.4",
         "@types/express": "^4.16.1",
-        "@types/node": "^10.12.24",
+        "@types/node": "^11.9.4",
         "rimraf": "^2.6.3",
         "tslint": "^5.12.1",
         "typescript": "^3.3.3"
