--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@inpassor/firebase-app",
-    "version": "0.3.31",
+    "version": "0.3.32",
     "license": "MIT",
     "author": "Oleg V. Kuzmin",
     "description": "Firebase Express application",
@@ -39,14 +39,14 @@
         "express": "^4.17.1",
         "express-sanitizer": "^1.0.5",
         "express-session": "^1.16.2",
-        "firebase-admin": "^8.2.0",
-        "firebase-functions": "^3.0.1",
+        "firebase-admin": "7.4.0",
+        "firebase-functions": "^3.0.2",
         "helmet": "^3.18.0"
     },
     "devDependencies": {
         "@firebase/app-types": "^0.4.0",
         "@types/express": "^4.17.0",
-        "@types/node": "^12.0.10",
+        "@types/node": "^12.0.12",
         "rimraf": "^2.6.3",
         "tslint": "^5.18.0",
         "typescript": "^3.5.2"
