--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@inpassor/firebase-app",
-    "version": "0.3.33",
+    "version": "0.3.34",
     "license": "MIT",
     "author": "Oleg V. Kuzmin",
     "description": "Firebase Express application",
@@ -31,24 +31,24 @@
     },
     "dependencies": {
         "@inpassor/functions": "^0.2.5",
-        "@sentry/node": "^5.4.3",
+        "@sentry/node": "^5.6.2",
         "body-parser": "^1.19.0",
         "cookie-parser": "^1.4.4",
         "cors": "^2.8.5",
-        "ejs": "^2.6.2",
+        "ejs": "^2.7.1",
         "express": "^4.17.1",
         "express-sanitizer": "^1.0.5",
         "express-session": "^1.16.2",
-        "firebase-admin": "7.4.0",
-        "firebase-functions": "^3.0.2",
-        "helmet": "^3.18.0"
+        "firebase-admin": "^8.5.0",
+        "firebase-functions": "^3.2.0",
+        "helmet": "^3.21.0"
     },
     "devDependencies": {
-        "@firebase/app-types": "^0.4.0",
-        "@types/express": "^4.17.0",
-        "@types/node": "^12.0.12",
-        "rimraf": "^2.6.3",
-        "tslint": "^5.18.0",
-        "typescript": "^3.5.2"
+        "@firebase/app-types": "^0.4.3",
+        "@types/express": "^4.17.1",
+        "@types/node": "^12.7.5",
+        "rimraf": "^3.0.0",
+        "tslint": "^5.20.0",
+        "typescript": "^3.6.3"
     }
 }
