--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@inpassor/firebase-app",
-    "version": "0.3.37",
+    "version": "0.3.38",
     "license": "MIT",
     "author": "Oleg V. Kuzmin",
     "description": "Firebase Express application",
@@ -49,6 +49,6 @@
         "@types/node": "^12.12.21",
         "rimraf": "^3.0.0",
         "tslint": "^5.20.1",
-        "typescript": "^3.7.3"
+        "typescript": "3.5.3"
     }
 }
