--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@inpassor/firebase-app",
-    "version": "0.3.38",
+    "version": "0.3.39",
     "license": "MIT",
     "author": "Oleg V. Kuzmin",
     "description": "Firebase Express application",
@@ -25,13 +25,14 @@
     ],
     "main": "lib/index.js",
     "scripts": {
-        "lint": "tslint --project tsconfig.json",
+        "up": "npm up && npm audit fix",
+        "lint": "eslint src/**/*.ts",
         "clean": "rimraf ./lib",
         "build": "npm run lint && npm run clean && tsc"
     },
     "dependencies": {
         "@inpassor/functions": "^0.2.8",
-        "@sentry/node": "^5.10.2",
+        "@sentry/node": "^5.11.1",
         "body-parser": "^1.19.0",
         "cookie-parser": "^1.4.4",
         "cors": "^2.8.5",
@@ -39,16 +40,21 @@
         "express": "^4.17.1",
         "express-sanitizer": "^1.0.5",
         "express-session": "^1.17.0",
-        "firebase-admin": "^8.8.0",
+        "firebase-admin": "^8.9.2",
         "firebase-functions": "^3.3.0",
         "helmet": "^3.21.2"
     },
     "devDependencies": {
         "@firebase/app-types": "^0.4.9",
         "@types/express": "^4.17.2",
-        "@types/node": "^12.12.21",
+        "@types/node": "^12.12.25",
+        "@typescript-eslint/eslint-plugin": "^2.17.0",
+        "@typescript-eslint/parser": "^2.17.0",
+        "eslint": "^6.8.0",
+        "eslint-config-prettier": "^6.9.0",
+        "eslint-plugin-prettier": "^3.1.2",
+        "prettier": "^1.19.1",
         "rimraf": "^3.0.0",
-        "tslint": "^5.20.1",
         "typescript": "3.5.3"
     }
 }
